Update demographics section and remove close rate highlighting

--- a/index.html
+++ b/index.html
@@ -130,15 +130,16 @@
                     </table>
                 </div>
                 <div>
-                    <h3>Top Nationalities</h3>
+                    <h3>Top Nationalities (Declared)</h3>
                     <table class="comparison-table">
-                        <thead><tr><th>Nationality</th><th>Declared</th><th>Inferred</th></tr></thead>
+                        <thead><tr><th>Nationality</th><th>Percentage</th></tr></thead>
                         <tbody>
-                            <tr><td>United States</td><td>56.52%</td><td>—</td></tr>
-                            <tr><td>Mexico</td><td>18.80%</td><td>28.67%</td></tr>
-                            <tr><td>Venezuela</td><td>3.91%</td><td>29.44%</td></tr>
-                            <tr><td>Honduras</td><td>6.92%</td><td>17.22%</td></tr>
-                            <tr><td>Guatemala</td><td>3.10%</td><td>—</td></tr>
+                            <tr><td><strong>United States</strong></td><td>56.52%</td></tr>
+                            <tr><td>Mexico</td><td>18.80%</td></tr>
+                            <tr><td>Honduras</td><td>6.92%</td></tr>
+                            <tr><td>Venezuela</td><td>3.91%</td></tr>
+                            <tr><td>Guatemala</td><td>3.10%</td></tr>
+                            <tr><td>Other</td><td>10.75%</td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -148,7 +149,7 @@
                 <ul class="insight-list">
                     <li>Texas remains the dominant state at 25.49%, with <strong>strong geographic diversification</strong></li>
                     <li><strong>Georgia is the #2 state at 9.92%</strong>, showing successful Southeast expansion</li>
-                    <li>Notable gap between declared (3.91%) and inferred (29.44%) Venezuelan nationality</li>
+                    <li><strong>Top inferred nationalities:</strong> Venezuela (29.44%), Mexico (28.67%), and Honduras (17.22%) - Venezuela shows notable gap between declared (3.91%) and inferred (29.44%) nationality</li>
                     <li>Mexico and Venezuela remain the primary remittance corridors</li>
                 </ul>
             </div>
@@ -171,13 +172,12 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-card-title">Close Rate</div>
-                    <div class="stat-card-value" style="color: #27fb6b;">8.6%</div>
+                    <div class="stat-card-value">8.6%</div>
                 </div>
             </div>
             <div class="insight-box">
                 <h3>💡 Boots on the Ground Insights</h3>
                 <ul class="insight-list">
-                    <li><strong>Exceptional 8.6% close rate</strong>, demonstrating highly effective field operations</li>
                     <li>55% activation rate shows consistent conversion quality</li>
                     <li>Quality-focused approach with 680 verified accounts and 377 active accounts</li>
                     <li>Field teams are successfully identifying and converting serious prospects</li>
@@ -223,9 +223,9 @@
                 <ul class="insight-list">
                     <li><strong>26.45% activation rate</strong> shows high-quality user acquisition</li>
                     <li><strong>$39.86 average transaction value</strong> indicates strong user engagement</li>
-                    <li><strong>8.6% close rate</strong> for Boots on the Ground - exceptional performance</li>
                     <li><strong>$0.40 CPL in Colombia</strong> demonstrates excellent market efficiency</li>
                     <li><strong>VMT Funding at 30.88%</strong> shows core remittance use case thriving</li>
+                    <li><strong>Geographic diversification</strong> with Georgia emerging as #2 state at 9.92%</li>
                 </ul>
             </div>
             <div class="insight-box" style="border-left: 5px solid #6c63ff; background: linear-gradient(135deg, #f0eeff 0%, #e6e3ff 100%);">
@@ -234,7 +234,7 @@
                     <li>Maintain current high-quality targeting strategies</li>
                     <li>Analyze Georgia's success (9.92%) for replication in other Southeast markets</li>
                     <li>Emphasize VMT capabilities in marketing messaging</li>
-                    <li>Document field team best practices achieving 8.6% close rate</li>
+                    <li>Document field team best practices for knowledge sharing</li>
                     <li>Accelerate Colombia launch planning with 21K+ leads ready</li>
                     <li>Investigate Venezuela declaration gap (3.91% vs 29.44% inferred)</li>
                 </ul>
