Change header emoji from bar graph to trophy cup

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="header-emoji">📊</div>
+            <div class="header-emoji">🏆</div>
             <h1>Paid Ads Weekly Report</h1>
             <p class="subtitle">October 13-19, 2025</p>
             <div class="header-stats">
