--- a/index.html
+++ b/index.html
@@ -1,251 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paid Ads Weekly Report - Oct 13-19, 2025</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: linear-gradient(135deg, #e8f4ff 0%, #f0f7ff 100%); color: #050d30; line-height: 1.6; padding: 40px 20px; }
-        .container { max-width: 1200px; margin: 0 auto; }
-        .header { text-align: center; margin-bottom: 60px; padding: 40px 20px; background: white; border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.08); }
-        .header-emoji { font-size: 64px; margin-bottom: 20px; }
-        h1 { font-size: 48px; color: #050d30; margin-bottom: 10px; font-weight: 700; }
-        .subtitle { font-size: 20px; color: #5a7a8f; margin-bottom: 30px; }
-        .header-stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; margin-top: 40px; }
-        .stat-box { background: linear-gradient(135deg, #27fb6b 0%, #1de05a 100%); padding: 25px; border-radius: 15px; color: #050d30; text-align: center; }
-        .stat-number { font-size: 36px; font-weight: 700; margin-bottom: 5px; }
-        .stat-label { font-size: 14px; opacity: 0.95; font-weight: 500; }
-        .section { background: white; border-radius: 20px; padding: 40px; margin-bottom: 40px; box-shadow: 0 10px 40px rgba(0,0,0,0.08); }
-        h2 { font-size: 32px; color: #050d30; margin-bottom: 30px; display: flex; align-items: center; gap: 15px; }
-        h3 { font-size: 24px; color: #050d30; margin: 30px 0 20px 0; }
-        .comparison-table { width: 100%; border-collapse: collapse; margin: 30px 0; }
-        .comparison-table thead { background: linear-gradient(135deg, #27fb6b 0%, #1de05a 100%); color: #050d30; }
-        .comparison-table th { padding: 18px; text-align: left; font-weight: 600; font-size: 15px; }
-        .comparison-table td { padding: 18px; border-bottom: 1px solid #e8f4ff; }
-        .comparison-table tbody tr:hover { background: #f0f9ff; }
-        .insight-box { background: linear-gradient(135deg, #e8f4ff 0%, #d4e8ff 100%); border-left: 5px solid #27fb6b; padding: 25px; border-radius: 10px; margin: 25px 0; }
-        .insight-box h3 { color: #050d30; margin-bottom: 15px; display: flex; align-items: center; gap: 10px; }
-        .insight-list { list-style: none; padding-left: 0; }
-        .insight-list li { padding: 12px 0; padding-left: 30px; position: relative; }
-        .insight-list li:before { content: "→"; position: absolute; left: 0; color: #27fb6b; font-weight: bold; font-size: 20px; }
-        .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; margin: 30px 0; }
-        .stat-card { background: linear-gradient(135deg, #f8fcff 0%, #e8f4ff 100%); border: 2px solid #27fb6b; border-radius: 15px; padding: 25px; text-align: center; }
-        .stat-card-title { font-size: 14px; color: #5a7a8f; margin-bottom: 10px; font-weight: 500; }
-        .stat-card-value { font-size: 32px; font-weight: 700; color: #050d30; margin-bottom: 5px; }
-        .stat-card-change { font-size: 14px; color: #5a7a8f; }
-        .two-column { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin: 30px 0; }
-        @media (max-width: 768px) { h1 { font-size: 36px; } .header-stats, .stats-grid, .two-column { grid-template-columns: 1fr; } }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <div class="header-emoji">🏆</div>
-            <h1>Paid Ads Weekly Report</h1>
-            <p class="subtitle">October 13-19, 2025</p>
-            <div class="header-stats">
-                <div class="stat-box"><div class="stat-number">3,002</div><div class="stat-label">Total Accounts<br>Created</div></div>
-                <div class="stat-box"><div class="stat-number">26.45%</div><div class="stat-label">Marketing<br>Activation Rate</div></div>
-                <div class="stat-box"><div class="stat-number">$39.86</div><div class="stat-label">Average Transaction<br>Amount</div></div>
-                <div class="stat-box"><div class="stat-number">55%</div><div class="stat-label">Boots on Ground<br>Activation Rate</div></div>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>🎯 Weekly Overview</h2>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-card-title">New Accounts</div>
-                    <div class="stat-card-value">3,002</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Marketing Activation Rate</div>
-                    <div class="stat-card-value">26.45%</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Avg Transaction Amount</div>
-                    <div class="stat-card-value">$39.86</div>
-                </div>
-            </div>
-            <div class="insight-box">
-                <h3>💡 Key Insights</h3>
-                <ul class="insight-list">
-                    <li><strong>Activation rate reached 26.45%</strong>, indicating high-quality user acquisition</li>
-                    <li>Average transaction amount of $39.86 shows strong user engagement</li>
-                    <li>Stable account creation with 3,002 new accounts this week</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>✨ Account Activation Performance</h2>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-card-title">Activation Rate</div>
-                    <div class="stat-card-value">26.45%</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Average Transaction</div>
-                    <div class="stat-card-value">$39.86</div>
-                </div>
-            </div>
-            <h3 style="margin-top: 40px;">Top User Activities</h3>
-            <table class="comparison-table">
-                <thead><tr><th>Activity Type</th><th>Percentage</th></tr></thead>
-                <tbody>
-                    <tr><td><strong>VMT Funding</strong></td><td>30.88%</td></tr>
-                    <tr><td>Card Activity</td><td>27.44%</td></tr>
-                    <tr><td>P2P Funding</td><td>14.99%</td></tr>
-                    <tr><td>Cash Load Activity</td><td>10.87%</td></tr>
-                    <tr><td>P2P Spending</td><td>5.36%</td></tr>
-                </tbody>
-            </table>
-            <div class="insight-box">
-                <h3>💡 Activity Insights</h3>
-                <ul class="insight-list">
-                    <li><strong>VMT Funding is the top activity at 30.88%</strong>, showing strong international transfer usage</li>
-                    <li>Card activity remains consistently strong at 27.44%</li>
-                    <li>P2P activities (funding and spending) show healthy adoption of social payment features</li>
-                    <li>Diverse activity mix indicates users are engaging with multiple platform features</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>🌎 New Accounts Demographics</h2>
-            <div class="two-column">
-                <div>
-                    <h3>Top States</h3>
-                    <table class="comparison-table">
-                        <thead><tr><th>State</th><th>Percentage</th></tr></thead>
-                        <tbody>
-                            <tr><td><strong>Texas</strong></td><td>25.49%</td></tr>
-                            <tr><td>Georgia</td><td>9.92%</td></tr>
-                            <tr><td>California</td><td>7.21%</td></tr>
-                            <tr><td>Florida</td><td>6.66%</td></tr>
-                            <tr><td>Louisiana</td><td>5.83%</td></tr>
-                            <tr><td>Other</td><td>44.89%</td></tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div>
-                    <h3>Top Nationalities (Declared)</h3>
-                    <table class="comparison-table">
-                        <thead><tr><th>Nationality</th><th>Percentage</th></tr></thead>
-                        <tbody>
-                            <tr><td><strong>United States</strong></td><td>56.52%</td></tr>
-                            <tr><td>Mexico</td><td>18.80%</td></tr>
-                            <tr><td>Honduras</td><td>6.92%</td></tr>
-                            <tr><td>Venezuela</td><td>3.91%</td></tr>
-                            <tr><td>Guatemala</td><td>3.10%</td></tr>
-                            <tr><td>Other</td><td>10.75%</td></tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="insight-box">
-                <h3>💡 Demographic Insights</h3>
-                <ul class="insight-list">
-                    <li>Texas remains the dominant state at 25.49%, with <strong>strong geographic diversification</strong></li>
-                    <li><strong>Georgia is the #2 state at 9.92%</strong>, showing successful Southeast expansion</li>
-                    <li><strong>Top inferred nationalities:</strong> Venezuela (29.44%), Mexico (28.67%), and Honduras (17.22%) - Venezuela shows notable gap between declared (3.91%) and inferred (29.44%) nationality</li>
-                    <li>Mexico and Venezuela remain the primary remittance corridors</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>👥 Boots on the Ground Performance</h2>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-card-title">Verified Accounts</div>
-                    <div class="stat-card-value">680</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Active Accounts</div>
-                    <div class="stat-card-value">377</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Activation Rate</div>
-                    <div class="stat-card-value">55%</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Close Rate</div>
-                    <div class="stat-card-value">8.6%</div>
-                </div>
-            </div>
-            <div class="insight-box">
-                <h3>💡 Boots on the Ground Insights</h3>
-                <ul class="insight-list">
-                    <li>55% activation rate shows consistent conversion quality</li>
-                    <li>Quality-focused approach with 680 verified accounts and 377 active accounts</li>
-                    <li>Field teams are successfully identifying and converting serious prospects</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>🇨🇴 MiBambu Colombia Campaign</h2>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-card-title">Weekly Spend</div>
-                    <div class="stat-card-value">$342.08</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Leads Generated</div>
-                    <div class="stat-card-value">863</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Cost Per Lead</div>
-                    <div class="stat-card-value">$0.40</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-card-title">Total Leads to Date</div>
-                    <div class="stat-card-value">21,713</div>
-                </div>
-            </div>
-            <div class="insight-box">
-                <h3>💡 Colombia Campaign Insights</h3>
-                <ul class="insight-list">
-                    <li><strong>Excellent $0.40 cost per lead</strong> demonstrates strong market efficiency</li>
-                    <li>863 leads generated this week with optimized spend of $342.08</li>
-                    <li>Cumulative total of 21,713+ leads provides solid foundation for market entry</li>
-                    <li>Campaign continues building quality audience ahead of Colombia launch</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>📈 Executive Summary</h2>
-            <div class="insight-box" style="border-left: 5px solid #ffc107; background: linear-gradient(135deg, #fff9e6 0%, #fff3cd 100%);">
-                <h3>🎯 Key Wins This Week</h3>
-                <ul class="insight-list">
-                    <li><strong>26.45% activation rate</strong> shows high-quality user acquisition</li>
-                    <li><strong>$39.86 average transaction value</strong> indicates strong user engagement</li>
-                    <li><strong>$0.40 CPL in Colombia</strong> demonstrates excellent market efficiency</li>
-                    <li><strong>VMT Funding at 30.88%</strong> shows core remittance use case thriving</li>
-                    <li><strong>Geographic diversification</strong> with Georgia emerging as #2 state at 9.92%</li>
-                </ul>
-            </div>
-            <div class="insight-box" style="border-left: 5px solid #6c63ff; background: linear-gradient(135deg, #f0eeff 0%, #e6e3ff 100%);">
-                <h3>📋 Recommended Actions</h3>
-                <ul class="insight-list">
-                    <li>Maintain current high-quality targeting strategies</li>
-                    <li>Analyze Georgia's success (9.92%) for replication in other Southeast markets</li>
-                    <li>Emphasize VMT capabilities in marketing messaging</li>
-                    <li>Document field team best practices for knowledge sharing</li>
-                    <li>Accelerate Colombia launch planning with 21K+ leads ready</li>
-                    <li>Investigate Venezuela declaration gap (3.91% vs 29.44% inferred)</li>
-                </ul>
-            </div>
-        </div>
-
-        <div style="text-align: center; padding: 40px; color: #5a7a8f;">
-            <p style="font-size: 24px; font-weight: 600; margin-bottom: 20px; color: #050d30;">Thank You</p>
-            <p style="font-size: 14px;">MyBambu Paid Ads Team | October 2025</p>
-            <p style="font-size: 14px; margin-top: 10px;"><strong>Mafe Varon • Mili Paul • Matthew Lopez</strong></p>
-        </div>
-    </div>
-</body>
-</html>
+$(cat /tmp/paid-ads-weekly-report-oct-13-19.html)
